--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,19 +8,19 @@
   <meta property="og:image" content="">
   <meta name="twitter:title" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="../assets/images/logo-128x125.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/assets/images/logo-128x125.png" type="image/x-icon">
   <meta name="description" content="{{ page.description }}">
   <meta name="author" content="{{ page.author }}">
   <meta name="layout" content="{{ page.layout }}" >
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
 
-  <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../assets/dropdown/css/style.css">
-  <link rel="stylesheet" href="../assets/theme/css/style.css">
+  <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="/assets/theme/css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700,400i,500i,600i,700i&amp;display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:400,500,600,700,400i,500i,600i,700i&display=swap"></noscript>
-  <link rel="stylesheet" href="../assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="stylesheet" href="/assets/mobirise/css/mbr-additional.css" type="text/css">
   
   <link rel="stylesheet" href="/assets/default/default.css" type="text/css">
   <link rel="stylesheet" href="/assets/theme/css/dracula.css"></script>
@@ -45,10 +45,17 @@
 
 
 
-      <div class="backwrap"><a class="back btn btn-black display-4" href="./">Retourner à la liste de projets</a></div>
+      <div class="backwrap">
+        <div style="display:none;" id="like" class="like-section">Vous avez aimez cet article ? Faites le savoir
+          <a title="Aimer" class="likewrap"><img class="social-button" alt="like button" src="/assets/images/like.png" id="like-button"></a>
+          <a title="Partager" class="likewrap"><img class="social-button" alt="share button" src="/assets/images/share.png" id="share-button"></a>
+        </div>
+
+        <a class="back btn btn-black display-4" href="./">Retourner à la liste de projets</a>
+      </div>
 
 
-      <script src="../assets/bootstrap/js/bootstrap.bundle.min.js"></script><script src="../assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="../assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="../assets/smoothscroll/smooth-scroll.js"></script>  <script src="../assets/ytplayer/index.js"></script>  <script src="../assets/dropdown/js/navbar-dropdown.js"></script>
+      <script src="/assets/bootstrap/js/bootstrap.bundle.min.js"></script><script src="/assets/web/assets/cookies-alert-plugin/cookies-alert-core.js"></script>  <script src="/assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>  <script src="/assets/smoothscroll/smooth-scroll.js"></script>  <script src="/assets/ytplayer/index.js"></script>  <script src="/assets/dropdown/js/navbar-dropdown.js"></script>
 
 
       <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js"></script>
