--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 
 
       <div class="backwrap">
-        <div style="display:none;" id="like" class="like-section">Vous avez aimez cet article ? Faites le savoir
+        <div id="like" class="like-section" style="display: none;">Vous avez aimez ce contenu ? Faites le savoir
           <a title="Aimer" class="likewrap"><img class="social-button" alt="like button" src="/assets/images/like.png" id="like-button"></a>
           <a title="Partager" class="likewrap"><img class="social-button" alt="share button" src="/assets/images/share.png" id="share-button"></a>
         </div>
