--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,7 @@
 
 
       <div class="backwrap">
-        <div id="like" class="like-section">Vous avez aimez ce contenu ? Faites le savoir
+        <div id="like" class="like-section">Vous avez aimé ce contenu ? Faites le savoir
           <a title="Aimer" class="likewrap" onclick="send_like_or_share('like')" clicks="0"><img class="social-button" alt="like button" src="/assets/images/like.png" id="like-button"></a>
           <a title="Partager" class="likewrap" onclick="send_like_or_share('partage')" clicks="0"><img class="social-button" alt="share button" src="/assets/images/share.png" id="share-button"></a>
         </div>
