--- a/assets/default/default.css
+++ b/assets/default/default.css
@@ -57,9 +57,6 @@ h3 {
   margin: 50px 0;
   text-align: center;
 }
-#page-content li::before {
-	content: '';
-}
 #page-content li {
 	margin-left: 3vw;
 	margin-bottom: 5px;
@@ -76,11 +73,12 @@ h3 {
   background-color: #111;
 }
 #page-content li::marker {
-	content: '• '
+	content: '• '!important;
 }
 #page-content ul#markdown-toc li::marker {
 	content: '' !important;
 }
+
 .top{
 	margin-top: 150px;
 }
@@ -136,12 +134,14 @@ h3 {
 }
 
 .like-section {
-	display: flex;
-	text-align: center;
-	justify-content: center;
-	margin-bottom: inherit;
-	font-style: italic;
-	color: gray;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    margin-bottom: inherit;
+    font-style: italic;
+    color: gray;
+    padding: 15px;
+    background-color: #e9e9e9;
 }
 .likewrap {
 	top: -10px;
